# diffx-js

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  examples.ts  index.d.ts  index.js  package-lock.json  package.json  test.js
.github/workflows/: ci.yml  release.yml
fixtures/: test1.json  test2.json
src/: lib.rs
tests/: core-features.test.js  diff.test.js  essential.test.js  format.test.js  package-lock.json  package.json  parsers.test.js  setup.js
