[package]
name = "diffx-js"
version = "0.6.1"
edition = "2021"
description = "JavaScript bindings for diffx - high-performance structured data comparison"
license = "MIT"
repository = "https://github.com/kako-jun/diffx-js"
authors = ["kako-jun"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core diffx functionality
diffx-core = "0.6.1"

# NAPI-RS for Node.js bindings
napi = { version = "2.2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.0"

[build-dependencies]
napi-build = "2.2"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-fmt"] }